<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numberActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/gobackvector" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/min_nr"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="200dp"
            android:inputType="numberSigned|number"
            android:text="@string/number_standard_min"
            android:textAlignment="center"
            android:textColor="#000"
            tools:ignore="RtlCompat" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/max_nr"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="75dp"
            android:text="@string/number_standard_max"
            android:textAlignment="center"
            android:inputType="number"
            android:textColor="#000"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/oswald"
            android:text="@string/random_number"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginLeft="87dp"
            android:layout_marginTop="150dp"
            android:text="@string/text_min"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="87dp"
            android:layout_marginRight="87dp"
            android:text="@string/tezt_max"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="215dp"
            android:text="@string/to_text"
            android:textColor="#000"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/number_rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/generat_buttom"
            android:layout_marginBottom="100dp"
            android:textColor="#000"
            android:fontFamily="@font/oswald"
            android:text="-"
            android:textSize="100sp" />

        <Button
            android:id="@+id/generat_buttom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:fontFamily="@font/oswald"
            android:text="@string/generat" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/generat_buttom" />

    </RelativeLayout>

    </ScrollView>

</LinearLayout>