<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#93E8F4"
    tools:context=".MenuActivity">



    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/moreInfo"
        app:srcCompat="@drawable/more"
        android:layout_margin="10dp"
        android:rotation="90"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/rvNumber"
            android:background="#fff"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:textColor="#000"
                android:text="@string/rvnumber"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/numbers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="40dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/rvDice"
            android:background="#fff"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:textColor="#000"
                android:text="@string/rvDice"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/gambling"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="40dp"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/rvCoins"
            android:background="#fff"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:textColor="#000"
                android:text="@string/rvCoins"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"


                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/money"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="40dp"

                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>